--- a/Feedback.storyboard
+++ b/Feedback.storyboard
@@ -154,7 +154,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="How interesting was this art piece?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1u-np-td5">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How interesting was this art piece?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1u-np-td5">
                                 <rect key="frame" x="20" y="340" width="351" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -172,7 +172,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whm-9I-avf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="High" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whm-9I-avf">
                                 <rect key="frame" x="335" y="283" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -190,15 +190,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIF-4B-0kf">
-                                <rect key="frame" x="190" y="150" width="10.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIF-4B-0kf">
+                                <rect key="frame" x="190" y="150" width="35" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2e0-jE-bFG">
-                                <rect key="frame" x="214.5" y="282" width="10.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2e0-jE-bFG">
+                                <rect key="frame" x="190" y="282" width="35" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -229,8 +229,8 @@
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5.5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="VEf-bq-kNl">
                                 <rect key="frame" x="34" y="369" width="347" height="31"/>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mN-NF-L0n">
-                                <rect key="frame" x="190" y="407" width="10.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mN-NF-L0n">
+                                <rect key="frame" x="190" y="407" width="35" height="21"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -249,7 +249,7 @@
                             <constraint firstItem="Nbg-DA-aT6" firstAttribute="top" secondItem="VEf-bq-kNl" secondAttribute="bottom" constant="7" id="2w4-ZO-cXm"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="Uxk-3x-Ppo" secondAttribute="trailing" constant="43" id="36G-c4-8se"/>
                             <constraint firstItem="vQJ-fk-iDd" firstAttribute="top" secondItem="VEf-bq-kNl" secondAttribute="bottom" constant="8" id="37J-uu-xnq"/>
-                            <constraint firstItem="Nbg-DA-aT6" firstAttribute="leading" secondItem="1mN-NF-L0n" secondAttribute="trailing" constant="134.5" id="3L3-Yw-8Fa"/>
+                            <constraint firstItem="Nbg-DA-aT6" firstAttribute="leading" secondItem="1mN-NF-L0n" secondAttribute="trailing" constant="110" id="3L3-Yw-8Fa"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="whm-9I-avf" secondAttribute="trailing" constant="43" id="3cz-QU-CXs"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="9FW-7S-Ol7" secondAttribute="trailing" constant="178" id="3gg-BC-PSP"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="hfQ-Lx-Nh9" secondAttribute="trailing" constant="43" id="5dy-it-fCU"/>
@@ -266,12 +266,14 @@
                             <constraint firstItem="hfQ-Lx-Nh9" firstAttribute="top" secondItem="o5i-3V-pah" secondAttribute="top" constant="41" id="Q5V-P7-Q2E"/>
                             <constraint firstItem="whm-9I-avf" firstAttribute="leading" secondItem="2e0-jE-bFG" secondAttribute="trailing" constant="110" id="Q79-ZW-grr"/>
                             <constraint firstItem="K9e-uV-a6Z" firstAttribute="top" secondItem="hfQ-Lx-Nh9" secondAttribute="bottom" constant="8" id="Q8v-aC-PeQ"/>
-                            <constraint firstItem="2e0-jE-bFG" firstAttribute="leading" secondItem="Jd1-le-ZHv" secondAttribute="trailing" constant="147.5" id="QFx-9u-gYn"/>
+                            <constraint firstItem="2e0-jE-bFG" firstAttribute="leading" secondItem="Jd1-le-ZHv" secondAttribute="trailing" constant="123" id="QFx-9u-gYn"/>
+                            <constraint firstItem="A1u-np-td5" firstAttribute="trailing" secondItem="Nbg-DA-aT6" secondAttribute="trailing" id="R01-qt-6bV"/>
                             <constraint firstItem="3oN-KJ-9fc" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="20" id="S2o-qh-0rH"/>
                             <constraint firstItem="2e0-jE-bFG" firstAttribute="top" secondItem="U03-yg-HxC" secondAttribute="bottom" constant="8" id="SFs-ZQ-1e8"/>
                             <constraint firstItem="vQJ-fk-iDd" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="36" id="T0Y-Bb-GSA"/>
                             <constraint firstItem="AIF-4B-0kf" firstAttribute="leading" secondItem="9at-77-frR" secondAttribute="trailing" constant="123" id="TJp-GI-GZK"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="K9e-uV-a6Z" secondAttribute="trailing" constant="35" id="UhE-OC-vKY"/>
+                            <constraint firstItem="A1u-np-td5" firstAttribute="leading" secondItem="3oN-KJ-9fc" secondAttribute="leading" id="WuL-7t-grB"/>
                             <constraint firstItem="U03-yg-HxC" firstAttribute="top" secondItem="3oN-KJ-9fc" secondAttribute="bottom" constant="6" id="X8Q-w2-g4F"/>
                             <constraint firstItem="Uxk-3x-Ppo" firstAttribute="top" secondItem="Nbg-DA-aT6" secondAttribute="bottom" constant="41" id="Z6k-iO-QqF"/>
                             <constraint firstItem="AIF-4B-0kf" firstAttribute="top" secondItem="K9e-uV-a6Z" secondAttribute="bottom" constant="6" id="ZiJ-wN-7rW"/>
@@ -286,7 +288,7 @@
                             <constraint firstItem="A1u-np-td5" firstAttribute="top" secondItem="whm-9I-avf" secondAttribute="bottom" constant="36" id="fwC-Gw-jsx"/>
                             <constraint firstItem="vQJ-fk-iDd" firstAttribute="top" secondItem="VEf-bq-kNl" secondAttribute="bottom" constant="8" id="gEv-Cy-KJW"/>
                             <constraint firstItem="hfQ-Lx-Nh9" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="20" id="gGN-Wr-Fzj"/>
-                            <constraint firstItem="IZV-Yu-ckj" firstAttribute="leading" secondItem="AIF-4B-0kf" secondAttribute="trailing" constant="134.5" id="gar-dh-MzH"/>
+                            <constraint firstItem="IZV-Yu-ckj" firstAttribute="leading" secondItem="AIF-4B-0kf" secondAttribute="trailing" constant="110" id="gar-dh-MzH"/>
                             <constraint firstItem="Jd1-le-ZHv" firstAttribute="top" secondItem="U03-yg-HxC" secondAttribute="bottom" constant="9" id="guh-u6-MUM"/>
                             <constraint firstItem="9at-77-frR" firstAttribute="top" secondItem="K9e-uV-a6Z" secondAttribute="bottom" constant="7" id="h87-4k-jAB"/>
                             <constraint firstItem="2e0-jE-bFG" firstAttribute="top" secondItem="U03-yg-HxC" secondAttribute="bottom" constant="8" id="hMO-xk-vAw"/>
@@ -297,11 +299,11 @@
                             <constraint firstItem="IZV-Yu-ckj" firstAttribute="top" secondItem="K9e-uV-a6Z" secondAttribute="bottom" constant="5" id="lNM-7K-vZf"/>
                             <constraint firstItem="SyL-FA-PRr" firstAttribute="top" secondItem="Uxk-3x-Ppo" secondAttribute="bottom" constant="8" id="pDu-U0-dBE"/>
                             <constraint firstItem="9FW-7S-Ol7" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="187" id="pRX-uz-Pmj"/>
-                            <constraint firstItem="Nbg-DA-aT6" firstAttribute="leading" secondItem="1mN-NF-L0n" secondAttribute="trailing" constant="134.5" id="prq-ZH-x5y"/>
+                            <constraint firstItem="Nbg-DA-aT6" firstAttribute="leading" secondItem="1mN-NF-L0n" secondAttribute="trailing" constant="110" id="prq-ZH-x5y"/>
                             <constraint firstItem="K9e-uV-a6Z" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="36" id="r2t-eB-LfY"/>
                             <constraint firstItem="IZV-Yu-ckj" firstAttribute="top" secondItem="K9e-uV-a6Z" secondAttribute="bottom" constant="5" id="r2v-xa-wH8"/>
                             <constraint firstItem="Uxk-3x-Ppo" firstAttribute="top" secondItem="vQJ-fk-iDd" secondAttribute="bottom" constant="40" id="s1K-gn-V7r"/>
-                            <constraint firstItem="2e0-jE-bFG" firstAttribute="leading" secondItem="Jd1-le-ZHv" secondAttribute="trailing" constant="147.5" id="tRd-KD-PSC"/>
+                            <constraint firstItem="2e0-jE-bFG" firstAttribute="leading" secondItem="Jd1-le-ZHv" secondAttribute="trailing" constant="123" id="tRd-KD-PSC"/>
                             <constraint firstItem="Uxk-3x-Ppo" firstAttribute="top" secondItem="vQJ-fk-iDd" secondAttribute="bottom" constant="40" id="u8I-9n-0QZ"/>
                             <constraint firstItem="VEf-bq-kNl" firstAttribute="leading" secondItem="o5i-3V-pah" secondAttribute="leading" constant="36" id="uel-R1-coY"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="bottom" secondItem="9FW-7S-Ol7" secondAttribute="bottom" constant="32" id="ulw-6l-E18"/>
@@ -311,7 +313,7 @@
                             <constraint firstItem="Uxk-3x-Ppo" firstAttribute="top" secondItem="1mN-NF-L0n" secondAttribute="bottom" constant="40" id="y6A-hp-nYN"/>
                             <constraint firstItem="o5i-3V-pah" firstAttribute="trailing" secondItem="3oN-KJ-9fc" secondAttribute="trailing" constant="43" id="yKH-T8-Vw0"/>
                             <constraint firstItem="3oN-KJ-9fc" firstAttribute="top" secondItem="9at-77-frR" secondAttribute="bottom" constant="45" id="zKe-EV-siG"/>
-                            <constraint firstItem="IZV-Yu-ckj" firstAttribute="leading" secondItem="AIF-4B-0kf" secondAttribute="trailing" constant="134.5" id="zbe-pf-5eg"/>
+                            <constraint firstItem="IZV-Yu-ckj" firstAttribute="leading" secondItem="AIF-4B-0kf" secondAttribute="trailing" constant="110" id="zbe-pf-5eg"/>
                             <constraint firstItem="1mN-NF-L0n" firstAttribute="leading" secondItem="vQJ-fk-iDd" secondAttribute="trailing" constant="123" id="zm5-NL-YfT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="o5i-3V-pah"/>
