--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -406,25 +406,25 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="slV-ko-5Tn"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tGS-HQ-U9F">
-                                                    <size key="itemSize" width="164" height="200"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tGS-HQ-U9F">
+                                                    <size key="itemSize" width="163" height="200"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="uO4-RP-KpF" customClass="DonorCollectionViewCell" customModule="HealingArts" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="164" height="200"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="163" height="200"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="164" height="200"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="163" height="200"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Qi-QJ-KYk">
-                                                                    <rect key="frame" x="10" y="10" width="144" height="150"/>
+                                                                    <rect key="frame" x="10" y="10" width="143" height="130"/>
                                                                 </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VH0-oD-8fT">
-                                                                    <rect key="frame" x="8" y="160" width="148" height="32"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VH0-oD-8fT">
+                                                                    <rect key="frame" x="8" y="140" width="147" height="52"/>
                                                                     <fontDescription key="fontDescription" name="Arial-ItalicMT" family="Arial" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -439,7 +439,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                             <constraint firstItem="7Qi-QJ-KYk" firstAttribute="leading" secondItem="uO4-RP-KpF" secondAttribute="leading" constant="10" id="aWW-Iq-44G"/>
                                                             <constraint firstItem="VH0-oD-8fT" firstAttribute="top" secondItem="7Qi-QJ-KYk" secondAttribute="bottom" id="eMr-aG-PG6"/>
                                                             <constraint firstAttribute="trailingMargin" secondItem="VH0-oD-8fT" secondAttribute="trailing" id="eP7-za-w7k"/>
-                                                            <constraint firstAttribute="bottom" secondItem="7Qi-QJ-KYk" secondAttribute="bottom" constant="40" id="laq-hY-sgj"/>
+                                                            <constraint firstAttribute="bottom" secondItem="7Qi-QJ-KYk" secondAttribute="bottom" constant="60" id="laq-hY-sgj"/>
                                                         </constraints>
                                                         <connections>
                                                             <outlet property="donorImageView" destination="7Qi-QJ-KYk" id="Bxd-CO-pAI"/>
