--- a/HealingArts/Calendar.storyboard
+++ b/HealingArts/Calendar.storyboard
@@ -35,7 +35,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="376" height="311"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newCancer" translatesAutoresizingMaskIntoConstraints="NO" id="dcx-9z-zmh">
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newCancer" translatesAutoresizingMaskIntoConstraints="NO" id="dcx-9z-zmh">
                                                     <rect key="frame" x="0.0" y="0.0" width="376" height="311"/>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d4u-sL-3Sd">
@@ -66,6 +66,7 @@
                                         <connections>
                                             <outlet property="imageView" destination="dcx-9z-zmh" id="Sqd-EO-pea"/>
                                             <outlet property="textlabel" destination="Q6H-XX-peX" id="0pu-zS-mnx"/>
+                                            <segue destination="dDI-UY-UoY" kind="show" id="am5-W1-kEE"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -89,8 +90,30 @@
             </objects>
             <point key="canvasLocation" x="44.927536231884062" y="130.58035714285714"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="ULc-Yc-eVU">
+            <objects>
+                <viewController id="dDI-UY-UoY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9qa-vl-LKy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="RedStar" translatesAutoresizingMaskIntoConstraints="NO" id="9tZ-9E-ZzK">
+                                <rect key="frame" x="0.0" y="99" width="414" height="208"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="MDe-ED-82Q"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="44G-0l-J7e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821.73913043478262" y="130.58035714285714"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="RedStar" width="839" height="839"/>
         <image name="newCancer" width="950" height="839"/>
     </resources>
 </document>
