finished feeback page

--- a/Feedback.storyboard
+++ b/Feedback.storyboard
@@ -213,6 +213,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9FW-7S-Ol7">
                                 <rect key="frame" x="187" y="800" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="onSubmitPressed:" destination="dnW-Cy-nhM" eventType="touchUpInside" id="7y8-7H-VSF"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SyL-FA-PRr">
                                 <rect key="frame" x="28" y="497" width="366" height="272"/>
@@ -222,12 +225,21 @@
                             </textView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5.5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="K9e-uV-a6Z">
                                 <rect key="frame" x="34" y="114" width="347" height="31"/>
+                                <connections>
+                                    <action selector="rateSliderAction:" destination="dnW-Cy-nhM" eventType="valueChanged" id="e54-cF-gng"/>
+                                </connections>
                             </slider>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5.5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="U03-yg-HxC">
                                 <rect key="frame" x="34" y="244" width="347" height="31"/>
+                                <connections>
+                                    <action selector="qualitySliderAction:" destination="dnW-Cy-nhM" eventType="valueChanged" id="elB-ev-S2Z"/>
+                                </connections>
                             </slider>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5.5" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="VEf-bq-kNl">
                                 <rect key="frame" x="34" y="369" width="347" height="31"/>
+                                <connections>
+                                    <action selector="interestingSliderAction:" destination="dnW-Cy-nhM" eventType="valueChanged" id="kaB-Uq-8ro"/>
+                                </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mN-NF-L0n">
                                 <rect key="frame" x="190" y="407" width="35" height="21"/>
@@ -318,6 +330,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="o5i-3V-pah"/>
                     </view>
+                    <connections>
+                        <outlet property="interestingLabel" destination="1mN-NF-L0n" id="kkg-L9-Wou"/>
+                        <outlet property="interestingSlider" destination="VEf-bq-kNl" id="kXM-WG-Ale"/>
+                        <outlet property="qualityLabel" destination="2e0-jE-bFG" id="VQQ-Db-uZg"/>
+                        <outlet property="qualitySlider" destination="U03-yg-HxC" id="4ZQ-67-0Dc"/>
+                        <outlet property="rateLabel" destination="AIF-4B-0kf" id="TlN-gY-mia"/>
+                        <outlet property="rateSlider" destination="K9e-uV-a6Z" id="8Zl-1S-FNf"/>
+                        <outlet property="submitButton" destination="9FW-7S-Ol7" id="zr4-dT-E9J"/>
+                        <outlet property="textView" destination="SyL-FA-PRr" id="mvt-hr-ucF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hnc-XW-0UY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
