--- a/HealingArts/ArtworkDetails.storyboard
+++ b/HealingArts/ArtworkDetails.storyboard
@@ -184,13 +184,13 @@
         <!--Card Art Details View Controller-->
         <scene sceneID="R8u-s5-eSZ">
             <objects>
-                <viewController id="S4a-NC-Q21" customClass="CardArtDetailsViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="S4a-NC-Q21" customClass="CardArtDetailsViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fSM-5K-MWa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o0e-BZ-vM2">
-                                <rect key="frame" x="0.0" y="44" width="414" height="717"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tourpic" translatesAutoresizingMaskIntoConstraints="NO" id="o0e-BZ-vM2">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -219,4 +219,7 @@
             <point key="canvasLocation" x="3912" y="21"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tourpic" width="2048" height="1225"/>
+    </resources>
 </document>
