changed segue to Calendar page

--- a/HealingArts/Base.lproj/Main.storyboard
+++ b/HealingArts/Base.lproj/Main.storyboard
@@ -98,10 +98,10 @@
             </objects>
             <point key="canvasLocation" x="2025" y="-630"/>
         </scene>
-        <!--Donor-->
+        <!--Calendar-->
         <scene sceneID="8Hi-07-AXV">
             <objects>
-                <viewControllerPlaceholder storyboardName="Donor" id="2IQ-c4-SDR" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Calendar" id="2IQ-c4-SDR" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="kLz-w9-pmV"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ejk-Fl-0ns" userLabel="First Responder" sceneMemberID="firstResponder"/>
