--- a/HealingArts/Base.lproj/Main.storyboard
+++ b/HealingArts/Base.lproj/Main.storyboard
@@ -102,11 +102,14 @@
         <scene sceneID="8Hi-07-AXV">
             <objects>
                 <viewControllerPlaceholder storyboardName="Calendar" id="2IQ-c4-SDR" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="kLz-w9-pmV"/>
+                    <tabBarItem key="tabBarItem" title="Item" image="icons8-calendar-50" id="kLz-w9-pmV"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ejk-Fl-0ns" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2025" y="1321"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icons8-calendar-50" width="25" height="25"/>
+    </resources>
 </document>
