--- a/HealingArts/Map/Map.storyboard
+++ b/HealingArts/Map/Map.storyboard
@@ -165,6 +165,6 @@
         <image name="mapIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="uwl-ca-WCM"/>
+        <segue reference="Nuf-ZY-hrJ"/>
     </inferredMetricsTieBreakers>
 </document>
